# pager-relay

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg.json
.githooks/: pre-commit  prepare-commit-msg
.github/workflows/: pr-checks.yml
config/: settings.json.dist
src/: http.c  pager_relay.c  settings.c  state.c  util.c
src/brightwheel/: brightwheel.c  brightwheel.h
src/include/: error.h  http.h  settings.h  state.h  util.h
